--- a/index.html
+++ b/index.html
@@ -813,28 +813,84 @@
 		slideDelay: 400,
 		dynamicEl: [
 			{
-				src: 'images/gallery/3.jpg',
-				thumb: 'images/gallery/3.jpg',
+				src: 'images/10.jpg',
+				thumb: 'images/10.jpg',
+				subHtml: '<h3 class="text-white fw-bold">Nov 2024</h3>',
 			},
 			{
-				src: 'images/gallery/4.jpg',
-				thumb: 'images/gallery/4.jpg',
+				src: 'images/11.jpg',
+				thumb: 'images/11.jpg',
+				subHtml: '<h3 class="text-white fw-bold">Dec 2024</h3>',
 			},
 			{
-				src: 'images/gallery/5.jpg',
-				thumb: 'images/gallery/5.jpg',
+				src: 'images/12.jpg',
+				thumb: 'images/12.jpg',
+				subHtml: '<h3 class="text-white fw-bold">Dec 2024</h3>',
 			},
 			{
-				src: 'images/gallery/6.jpg',
-				thumb: 'images/gallery/6.jpg',
+				src: 'images/13.jpg',
+				thumb: 'images/13.jpg',
+				subHtml: '<h3 class="text-white fw-bold">Jun 2025</h3>',
 			},
 			{
-				src: 'images/gallery/7.jpg',
-				thumb: 'images/gallery/7.jpg',
+				src: 'images/14.jpg',
+				thumb: 'images/14.jpg',
+				subHtml: '<h3 class="text-white fw-bold">Feb 2025</h3>',
 			},
 			{
-				src: 'images/gallery/8.jpg',
-				thumb: 'images/gallery/8.jpg',
+				src: 'images/15.jpg',
+				thumb: 'images/15.jpg',
+				subHtml: '<h3 class="text-white fw-bold">Mar 2025</h3>',
+			},
+			{
+				src: 'images/16.jpg',
+				thumb: 'images/16.jpg',
+				subHtml: '<h3 class="text-white fw-bold">Mar 2025</h3>',
+			},
+			{
+				src: 'images/17.jpg',
+				thumb: 'images/17.jpg',
+				subHtml: '<h3 class="text-white fw-bold">April 2025</h3>',
+			},
+			{
+				src: 'images/19.jpg',
+				thumb: 'images/19.jpg',
+				subHtml: '<h3 class="text-white fw-bold">May 2025</h3>',
+			},
+			{
+				src: 'images/20.jpg',
+				thumb: 'images/20.jpg',
+				subHtml: '<h3 class="text-white fw-bold">June 2025</h3>',
+			},
+			{
+				src: 'images/21.jpg',
+				thumb: 'images/21.jpg',
+				subHtml: '<h3 class="text-white fw-bold">July 2025</h3>',
+			},
+			{
+				src: 'images/22.jpg',
+				thumb: 'images/22.jpg',
+				subHtml: '<h3 class="text-white fw-bold">July 2025</h3>',
+			},
+			{
+				src: 'images/23.jpg',
+				thumb: 'images/23.jpg',
+				subHtml: '<h3 class="text-white fw-bold">July 2025</h3>',
+			},
+			{
+				src: 'images/24.jpg',
+				thumb: 'images/24.jpg',
+				subHtml: '<h3 class="text-white fw-bold">July 2025</h3>',
+			},
+			{
+				src: 'images/25.jpg',
+				thumb: 'images/25.jpg',
+				subHtml: '<h3 class="text-white fw-bold">July 2025</h3>',
+			},
+			{
+				src: '',
+				thumb: '',
+				subHtml: '<h3 class="text-white fw-bold">August 2025 🫧✨</h3>',
 			}
 		],
 	});
